--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,7 @@ pandas==2.2.2
 pycparser==2.22
 pydantic==2.7.0
 pydantic_core==2.18.1
+gunicorn==21.2.0
 PyMySQL==1.1.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
