--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,15 @@
-aiohttp==3.9.4
-aiosignal==1.3.1
-alembic==1.13.1
-annotated-types==0.6.0
-anyio==4.3.0
-attrs==23.2.0
-azure-functions==1.19.0
-blinker==1.7.0
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-cryptography==42.0.5
-dataclasses-json==0.6.4
-distro==1.9.0
-Flask==3.0.3
-Flask-Login==0.6.3
-Flask-Migrate==4.0.7
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.1
-frozenlist==1.4.1
-greenlet==3.0.3
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.0
-idna==3.7
-itsdangerous==2.1.2
-Jinja2==3.1.3
-joblib==1.4.0
-jsonpatch==1.33
-jsonpointer==2.4
-jwt==1.3.1
-langchain==0.1.16
-langchain-community==0.0.32
-langchain-core==0.1.42
-langchain-text-splitters==0.0.1
-langsmith==0.1.47
+setuptools>=68.0.0
+wheel>=0.40.0
+Flask==2.3.3
+Werkzeug==2.3.7
+Flask-Login==0.6.2
+Flask-SQLAlchemy==3.0.5
+Flask-WTF==1.1.1
+Flask-Migrate==4.0.4
+python-dotenv==1.0.0
+gunicorn==21.2.0
+PyMySQL==1.0.3
+openai==1.0.0
 Mako==1.3.3
 MarkupSafe==2.1.5
 marshmallow==3.21.1
