--- a/requirements.txt
+++ b/requirements.txt
@@ -17,8 +17,8 @@ langchain==0.1.16
 langchain-core==0.1.42
 openai==1.30.0  # Updated to a newer version
 pydantic==2.7.0
+httpcore==1.0.5
 httpx==0.27.0
-httpcore==0.17.3  # Pin httpcore to ensure compatibility
 
 # Utilities
 python-dotenv==1.0.1
